# assignment-2-ros-2-and-vision-18lily2018

./: README.md  README_Assignment3.txt  demo_all.sh  run_motion.sh  run_turtlesim.sh
assignment2/aisd_motion/: package.xml  setup.py
assignment2/aisd_motion/aisd_motion/: __init__.py  move.py
assignment2/aisd_msgs/: package.xml
assignment2/aisd_msgs/aisd_msgs/: __init__.py
assignment2/aisd_vision/: package.xml  setup.py
src/: README_Assignment2.txt
src/aisd_hearing/: package.xml  setup.py
src/aisd_hearing/aisd_hearing/: recording_publisher.py  speak_client.py  words_publisher.py
src/aisd_motion/: package.xml
src/aisd_msgs/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/aisd_msgs/msg/: Hand.msg
src/aisd_speaking/: package.xml  setup.py
src/aisd_speaking/aisd_speaking/: speak.py
src/aisd_vision/: CMakeLists.txt
src/aisd_vision/aisd_vision/: __init__.py  hands.py  image_publisher.py
