<package format="3">
  <name>aisd_motion</name>
  <version>0.0.0</version>
  <description>Motion node</description>

  <maintainer email="aisd@example.com">aisd</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>aisd_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
